[gd_scene load_steps=6 format=3 uid="uid://b2d7kghs0umqt"]

[ext_resource type="Script" path="res://plants/plant.gd" id="1_dyed5"]
[ext_resource type="Script" path="res://misc/entity_sprites.gd" id="2_4abew"]
[ext_resource type="Shader" path="res://map/TilesetBlend.gdshader" id="3_rrjoj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtva6"]
shader = ExtResource("3_rrjoj")
shader_parameter/blend_value = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s7dah"]
shader = ExtResource("3_rrjoj")
shader_parameter/blend_value = 0.0

[node name="Plant" type="Node2D"]
script = ExtResource("1_dyed5")

[node name="EntitySprites" type="Node2D" parent="." node_paths=PackedStringArray("day_sprite", "night_sprite")]
script = ExtResource("2_4abew")
day_sprite = NodePath("PlantDay")
night_sprite = NodePath("PlantNight")

[node name="PlantDay" type="Sprite2D" parent="EntitySprites"]
material = SubResource("ShaderMaterial_rtva6")

[node name="PlantNight" type="Sprite2D" parent="EntitySprites"]
material = SubResource("ShaderMaterial_s7dah")
